Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/VA_Notificaton__c.object-meta.xml
<CustomObject>
    <label>VA Notificaton</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VA Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>