Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>