Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>