Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Credit_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account_Name__c</fullName>
    <label>Credit Account Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>