Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <label>Event Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>