Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>