Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <label>External Reference</label>
    <length>60</length>
    <type>Text</type>
</CustomField>