Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Gateway_Code__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Code__c</fullName>
    <label>Gateway Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>