Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Gateway_Message__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Message__c</fullName>
    <label>Gateway Message</label>
    <length>60</length>
    <type>Text</type>
</CustomField>