Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/InternalRef__c.field-meta.xml
<CustomField>
    <fullName>InternalRef__c</fullName>
    <label>InternalRef</label>
    <length>60</length>
    <type>Text</type>
</CustomField>