Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <length>60</length>
    <type>Text</type>
</CustomField>