Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Narration__c.field-meta.xml
<CustomField>
    <fullName>Narration__c</fullName>
    <label>Narration</label>
    <length>60</length>
    <type>Text</type>
</CustomField>