Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>60</length>
    <type>Text</type>
</CustomField>