Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Originator_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Originator_Account_Number__c</fullName>
    <label>Originator Account Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>