Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Originator_Name__c.field-meta.xml
<CustomField>
    <fullName>Originator_Name__c</fullName>
    <label>Originator Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>