Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <label>Public Key</label>
    <length>60</length>
    <type>Text</type>
</CustomField>