Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/VA_Notificaton__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>60</length>
    <type>Text</type>
</CustomField>